updated the unit tests after change of implementation in account-meta-data webapp